# agent47

./: readme.md
docs/: best-practice.yaml  file-content-server.txt  file-structure-server.txt  ideal-file-structure.txt  project-bible.yaml  promptify-project.py
docs/prompts/: agent.txt
docs/scripts/: collect_file_structure.py
selective-persistent-agent/: project-bible.yaml
server/: README.md
server/app/: config.py  main.py
server/app/api/: dependencies.py
server/app/api/v1/: students.py
server/app/models/: base.py  session.py  student.py
server/app/schemas/: student.py
server/app/services/: base.py  student_service.py
server/scripts/: start.sh
virtual-tutoring-system/: project-bible.yaml
virtual-tutoring-system/docs/: file-content-server.txt  file-structure-server.txt
virtual-tutoring-system/docs/prompts/agent/: agent.txt
virtual-tutoring-system/docs/scripts/: collect-code.py
virtual-tutoring-system/scripts/: collect-code.py
virtual-tutoring-system/server/: docker-compose.yml  dockerfile  pyproject.toml
virtual-tutoring-system/server/scripts/: migrate.sh  test.sh
