[tool.poetry]
name = "virtual-tutoring-system"
version = "1.0.0"
description = "A virtual tutoring system."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
motor = "^3.1.1"
pydantic = "^1.10.2"
liteLLM = "^0.1.0"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
bcrypt = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"